Fix render issue with Select widget
Add loading of required JS scripts into JobTracker.html

--- a/JobTracker/war/JobTracker.html
+++ b/JobTracker/war/JobTracker.html
@@ -18,6 +18,10 @@
     <!--                                           -->
     <title>Green Beans IT JobTracker</title>
     
+    <script type="text/javascript" src="jobtracker/js/jquery-1.12.0.min.cache.js"></script>
+    <script type="text/javascript" src="jobtracker/js/bootstrap-3.3.6.min.cache.js"></script>
+    <script type="text/javascript" src="jobtracker/js/bootstrap-select-1.10.0.min.cache.js"></script>
+    
     <!--                                           -->
     <!-- This script loads your compiled module.   -->
     <!-- If you add any GWT meta tags, they must   -->
