--- a/JobTracker/war/JobTracker.html
+++ b/JobTracker/war/JobTracker.html
@@ -12,11 +12,15 @@
     <!-- Consider inlining CSS to reduce the number of requested files -->
     <!--                                                               -->
     <link type="text/css" rel="stylesheet" href="JobTracker.css">
+    <link type="text/css" rel="stylesheet" href="jobtracker/css/bootstrap-3.3.6.min.cache.css"></link>
+    <link type="text/css" rel="stylesheet" href="jobtracker/css/bootstrap-select-1.10.0.min.cache.css"></link>
+    <link type="text/css" rel="stylesheet" href="jobtracker/css/bootstrap-theme-3.3.6.min.cache.css"></link>
+    <link type="text/css" rel="stylesheet" href="jobtracker/css/font-awesome-4.5.0.min.cache.css"></link>
 
     <!--                                           -->
     <!-- Any title is fine                         -->
     <!--                                           -->
-    <title>Green Beans IT JobTracker</title>
+    <title>Green Beans IT Timer</title>
     
     <script type="text/javascript" src="jobtracker/js/jquery-1.12.0.min.cache.js"></script>
     <script type="text/javascript" src="jobtracker/js/bootstrap-3.3.6.min.cache.js"></script>
@@ -27,7 +31,8 @@
     <!-- If you add any GWT meta tags, they must   -->
     <!-- be added before this line.                -->
     <!--                                           -->
-    <script type="text/javascript" language="javascript" src="jobtracker/jobtracker.nocache.js"></script>
+    <script type="text/javascript" language="javascript" src="net_greenbeansit_timer/net_greenbeansit_timer.nocache.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
   </head>
 
   <!--                                           -->
