--- a/JobTracker/src/main/webapp/JobTracker.html
+++ b/JobTracker/src/main/webapp/JobTracker.html
@@ -31,8 +31,7 @@
     <!-- If you add any GWT meta tags, they must   -->
     <!-- be added before this line.                -->
     <!--                                           -->
-    <script type="text/javascript" language="javascript" src="net_greenbeansit_timer/net_greenbeansit_timer.nocache.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    <script type="text/javascript" language="javascript" src="jobtracker/jobtracker.nocache.js"></script>
   </head>
 
   <!--                                           -->
