Remove 'language' attribute in <script> tag in JobTracker.html

--- a/JobTracker/src/main/webapp/JobTracker.html
+++ b/JobTracker/src/main/webapp/JobTracker.html
@@ -31,7 +31,7 @@
     <!-- If you add any GWT meta tags, they must   -->
     <!-- be added before this line.                -->
     <!--                                           -->
-    <script type="text/javascript" language="javascript" src="jobtracker/jobtracker.nocache.js"></script>
+    <script type="text/javascript" src="jobtracker/jobtracker.nocache.js"></script>
   </head>
 
   <!--                                           -->
