--- a/JobTracker/src/main/webapp/JobTracker.html
+++ b/JobTracker/src/main/webapp/JobTracker.html
@@ -21,7 +21,7 @@
     <!--                                           -->
     <!-- Any title is fine                         -->
     <!--                                           -->
-    <title>Green Beans IT Timer</title>
+    <title>JobTracker</title>
     
     <script type="text/javascript" src="jobtracker/js/jquery-1.12.0.min.cache.js"></script>
     <script type="text/javascript" src="jobtracker/js/bootstrap-3.3.6.min.cache.js"></script>
